<resources>
    <string name="app_name">11_Avtorization</string>
    <string name="ok">OK</string>
    <string name="sing_in">Sign In</string>
    <string name="sing_up">Sing Up</string>
    <string name="avatar">AVATAR</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="name1">Имя</string>
    <string name="name2">Фамилия</string>
    <string name="name3">Отчество</string>
    <string name="done">Готово</string>
</resources>